Change logo to space-shuttle

--- a/flight-search-logo/index.html
+++ b/flight-search-logo/index.html
@@ -12,6 +12,6 @@
     </style>
   </head>
   <body>
-    <i class="fa fa-fighter-jet" id="logo"></i>
+    <i class="fa fa-space-shuttle" id="logo"></i>
   </body>
 </html>
